<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rehappilitering</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exercise">Mina Övningar</string>
    <string name="schedule">Rehabschema</string>
    <string name="statistics">Statistik</string>
    <string name="add_exercise">Lägg till övningar</string>
    <string name="title_activity_your_exercises">YourExercises</string>
    <string name="title_activity_add_exercises">AddExercises</string>
    <string name="title_activity_view_schedule">ViewSchedule</string>
    <string name="title_activity_view_statistics">ViewStatistics</string>
    <string name="title_activity_your_exercises_listed">YourExercisesList</string>
    <string name="title_activity_add_exercises_to_list">AddExercisesToList</string>
    <string name="title_activity_instructions_add">InstructionsAdd</string>
    <string name="title_activity_instructions_your">InstructionsYour</string>
    <string name="title_activity_evaluate">Evaluate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="schedule_1">1 - 2 veckor</string>
    <string name="schedule_1_text">
        - Minska svullnad genom högläge och kyla, aktiv fotrörelse\n
        - Den vita strumpan på benet dygnet runt\n
        - Träning enligt hemprogram 4-5 ggr / dag\n
        - Använd två kryckor inhomhus 1 osv
    </string>

    <string name="schedule_2">2 - 6 veckor</string>
    <string name="schedule_2_text">
        - Träna hemprogrammet!\n
        - Vita strumpan på vid behov\n
        - Suturtagning 12-14 dagar efter operation (stygn)\n
        - Utöka träningen i rörlighet, muskelkontroll och balans hos sjukgymnast\n
        - Träning av gångteknik utan hälta\n
        - Fortsätt med högläge och kyla om knät är svullet
    </string>

    <string name="schedule_3">7 - 12 veckor</string>
    <string name="schedule_3_text">
        - Träning hos sjukgymnast\n
        - Fortsatt funktions- och styrketräning\n
        - Kan påbörja vattenträning\n
        - Vid ca 3 månader bör du ha full rörlighet i knäleden
    </string>

</resources>
