<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appName"/>

    <ImageButton android:layout_width="60dp"
        android:layout_height="16dp"
        android:text="@string/exercise"
        android:id="@+id/exerciseButton"
        android:layout_below="@+id/appName"
        android:background="@drawable/ic_launcher"/>

    <ImageButton android:layout_width="60dp"
        android:layout_height="16dp"
        android:text="@string/add_exercise"
        android:id="@+id/addButton"
        android:layout_below="@+id/exerciseButton"
        android:background="@drawable/ic_launcher"/>

    <ImageButton android:layout_width="60dp"
        android:layout_height="16dp"
        android:text="@string/statistics"
        android:id="@+id/statisticsButton"
        android:layout_below="@id/addButton"
        android:background="@drawable/ic_launcher"/>

    <ImageButton android:layout_width="60dp"
        android:layout_height="16dp"
        android:text="@string/schedule"
        android:id="@+id/scheduleButton"
        android:layout_below="@+id/statisticsButton"
        android:background="@drawable/ic_launcher"/>

</RelativeLayout>
